# amit_d36_assignments

./: ASG_1-1.c  ASG_1-2.c  ASG_2-1.c  ASG_2-2.c  ASG_3-1.c  ASG_3-2.c  ASG_4-1.c  ASG_4-2.c  CMakeLists.txt  README.md
