cmake_minimum_required(VERSION 3.22)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/output/${CMAKE_BUILD_TYPE}")

project(amit_assignment C)




add_executable(ASG_1-1 ASG_1-1.c)
add_executable(ASG_1-2 ASG_1-2.c)

add_executable(ASG_2-1 ASG_2-1.c)
add_executable(ASG_2-2 ASG_2-2.c)

add_executable(ASG_3-1 ASG_3-1.c)
add_executable(ASG_3-2 ASG_3-2.c)

add_executable(ASG_4-1 ASG_4-1.c)
add_executable(ASG_4-2 ASG_4-2.c)